# spacy_pat_match_dsl

./: LICENSE  README.md  pyproject.toml  setup.py  there.txt
examples/: example.py
spacy_pat_match_dsl/: dsl.py
spacy_pat_match_dsl.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/spacy_pat_match_dsl/: dsl.py
